--- a/bidding/templates/home.html
+++ b/bidding/templates/home.html
@@ -4,40 +4,47 @@
 <!--here we are going to add chart.js and excelGen files -->
 
 {% block nav%}
-    <div class="navbar-collapse collapse offset-md-6" id="navbarDefault">
+    <div class="navbar-collapse collapse offset-md-7" id="navbarDefault">
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('home') }}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('tellers') }}">Manage</a>
+            <a class="nav-link" href="{{ url_for('sell_item') }}">Sell Item</a>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('payments') }}">Bookings</a>
-          </li>
-
-        <li class="nav-item">
-            <a class="nav-link " href="{{ url_for('extras') }}">Apps</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link " href="{{ url_for('help') }}">Help</a>
+            <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('my_items') }}">My Items</a>
           </li>
           <li class="nav-item">
-                <a class="nav-link " href="{{ url_for('logout') }}" style="color:red;">Logout</a>
+                <a class="nav-link text-danger" href="{{ url_for('logout') }}" >Logout</a>
           </li>
         </ul>
       </div>
 
 {% endblock %}
+<style>
+    .thumbs {
+        border-radius:5px;
+    }
+    img{
+        border-radius: 5px;
+    }
+    .thumbnail {
+      width: 150px;
+      height: 150px;
+      overflow: hidden;
+    }
+</style>
+
 {% block status%}
+
   <section class="intro-single">
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-lg-8">
           <div class="title-single-box">
-            <h5><small class="text-muted">Dashboard</small></h5>
+            <h5><small class="text-muted">Home</small></h5>
             <span class="color-text-a"></span>
           </div>
         </div>
@@ -45,24 +52,24 @@
     </div>
   </section>
 {% endblock%}
+
 {% block content %}
-<h6 class="text-muted mb-3 font-weight-bold">
-    {% if branch %}
-        {{ branch.name }}
-    {% else %}
-        Oops, Application not activated. <a href="{{ url_for('extras') }}"class="text-primary">activate here</a>
-    {% endif %}
-</h6>
-<h5 class="text-muted">Good {{ dash_data.statement }} {{ dash_data.user }},</h5>
-    <h6 class="text-muted">{{today}}</h6>
-    <h6 class="text-info mb-5">Server Address — {{ server_address }} </h6>
+    <div class="row mt-n5">
 
+    {% for item in items %}
+        <div class="col-lg-3 items mb-5">
+            <img src="/static/images/{{ item['item'].image_file }}" alt="" class=" col-12 thumbnail row mb-2 mt-sm-5" style="width: 250px;
+      height: 250px;
+      overflow: hidden;">
+            <div class="">
+                <h5>{{ item["item"].name }}</h5>
+                <div class="h6 text-info">Winning bid — £{{ item["winning"].price }}.00</div>
+                <a href="{{ url_for("view_item_single",id=item['item'].id) }}" class="h6 text-primary" >More info</a>
+            </div>
+        </div>
+    {% endfor %}
 
-<h2><a href="{{ url_for('payments') }}">{{ dash_data.bookings }}</a></h2>
-<h2> <a href="{{  url_for('tellers') }}">{{ dash_data.tellers }}</a></h2>
-<h2><a href="{{ url_for('add_company') }}">{{ dash_data.services }}</a></h2>
-<h2><a href="{{ url_for('upload_video__') }}">{{ dash_data.video }}</a></h2>
-<h2>{{ dash_data.todays_bookings }}</h2>
+    </div>
 {% endblock %}
 
 
