--- a/bidding/templates/item_view.html
+++ b/bidding/templates/item_view.html
@@ -1,10 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'layout.html'%}
+<!--css requires for chart.js-->
+<!--end of css requires-->
+<!--here we are going to add chart.js and excelGen files -->
+
+{% block nav%}
+    <div class="navbar-collapse collapse offset-md-7" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('sell_item') }}">Sell Item</a>
+          </li>
+
+            <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('my_items') }}">My Items</a>
+          </li>
+          <li class="nav-item">
+                <a class="nav-link " href="{{ url_for('logout') }}" style="color:red;">Logout</a>
+          </li>
+        </ul>
+      </div>
+
+{% endblock %}
+{% block status%}
+
+  <section class="intro-single">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h5><small class="text-muted">Home</small></h5>
+            <span class="color-text-a"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+{% endblock%}
+
+{% block content %}
+    <div class="row" style="margin-top:-20px;">
+        <div class="col-lg-7">
+            <img src="/static/images/{{ item.image_file }}" alt="" class="col-12 thumbs" >
+        </div>
+    {% if item.sold %}
+        <div class="col-lg-5">
+        <h4>{{ item.name }}</h4>
+        <div class="h6 text-info">Amount — £{{ winning_bid.price }}.00</div>
+        <div class="h6 text-info mb-5">Winner — {{ winner.name }}</div>
+        <div class="h6 text-secondary mb-4 ">Posted by : {{ user.name }} <br> Phone — {{ user.phone }} <br> Email — {{ user.email }}</div>
+
+        <a class="btn btn-secondary btn-sm disabled" style="color:#fff;" href="{{ url_for('bid_higher',id=item.id)}}">Item Sold to {{ winner.name }}</a>
+        <h6 class="mt-3" style="line-height: 1.7;">{{ item.description}}</h6>
+    </div>
+    {% else %}
+         <div class="col-lg-5">
+        <h4>{{ item.name }}</h4>
+        <div class="h6 text-info">Winning bid — £{{ winning_bid.price }}.00</div>
+
+        <div class="h6 text-info mb-5">My bid —
+            {% if current_bid %}
+                £{{ current_bid.price }}.00
+            {% else %}
+                £0.00
+            {% endif %}
+        </div>
+        <div class="h6 text-secondary mb-4 ">Posted by : {{ user.name }} <br> Phone — {{ user.phone }} <br> Email — {{ user.email }}</div>
+
+        <a class="btn btn-primary btn-sm" style="color:#fff;" href="{{ url_for('bid_higher',id=item.id)}}">Bid £1 Higher </a>
+        <h6 class="mt-3" style="line-height: 1.7;">{{ item.description}}</h6>
+    </div>
+    {% endif %}
+    </div>
+{% endblock %}
+
+<style>
+    .thumbs {
+        border-radius:5px;
+    }
+    img{
+        border-radius: 5px;
+    }
+</style>
+
