--- a/bidding/templates/item_view_single.html
+++ b/bidding/templates/item_view_single.html
@@ -1,10 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'layout.html'%}
+<!--css requires for chart.js-->
+<!--end of css requires-->
+<!--here we are going to add chart.js and excelGen files -->
+
+{% block nav%}
+    <div class="navbar-collapse collapse offset-md-7" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('sell_item') }}">Sell Item</a>
+          </li>
+
+            <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('view_item') }}">My Items</a>
+          </li>
+          <li class="nav-item">
+                <a class="nav-link " href="{{ url_for('logout') }}" style="color:red;">Logout</a>
+          </li>
+        </ul>
+      </div>
+
+{% endblock %}
+{% block status%}
+
+  <section class="intro-single">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h5><small class="text-muted">Home</small></h5>
+            <span class="color-text-a"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+{% endblock%}
+
+{% block content %}
+    <div class="row ">
+        <div class="col-lg-3 items">
+            <img src="../static/images/wallpaper.jpg" alt="" class=" col-12 thumbs row mb-2">
+            <div class="">
+                <h5>BMW CR-V 2014</h5>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, laudantium.</h6>
+                <div class="h6 text-info">Current bid — £34.99 </div>
+                <a href="" class="h6 text-primary" >More info</a>
+            </div>
+        </div>
+
+    <div class="col-lg-3 items">
+            <img src="../static/images/wallpaper.jpg" alt="" class=" col-12 thumbs row mb-2">
+            <div class="">
+                <h5>BMW CR-V 2014</h5>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, laudantium.</h6>
+                <div class="h6 text-info">Current bid — £34.99 </div>
+                <a href="" class="h6 text-primary" >More info</a>
+            </div>
+        </div>
+
+    <div class="col-lg-3 items">
+            <img src="../static/images/wallpaper.jpg" alt="" class=" col-12 thumbs row mb-2">
+            <div class="">
+                <h5>BMW CR-V 2014</h5>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, laudantium.</h6>
+                <div class="h6 text-info">Current bid — £34.99 </div>
+                <a href="" class="h6 text-primary" >More info</a>
+            </div>
+        </div>
+    <div class="col-lg-3 items">
+            <img src="../static/images/wallpaper.jpg" alt="" class=" col-12 thumbs row mb-2">
+            <div class="">
+                <h5>BMW CR-V 2014</h5>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, laudantium.</h6>
+                <div class="h6 text-info">Current bid — £34.99 </div>
+                <a href="" class="h6 text-primary" >More info</a>
+            </div>
+        </div>
+
+    <div class="col-lg-3 items mt-5">
+            <img src="../static/images/wallpaper.jpg" alt="" class=" col-12 thumbs row mb-2">
+            <div class="">
+                <h5>BMW CR-V 2014</h5>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, laudantium.</h6>
+                <div class="h6 text-info">Current bid — £34.99 </div>
+                <a href="" class="h6 text-primary" >More info</a>
+            </div>
+        </div>
+
+    </div>
+{% endblock %}
+
+<style>
+    .thumbs {
+        border-radius:5px;
+    }
+    img{
+        border-radius: 5px;
+    }
+</style>
+
