--- a/bidding/templates/layout.html
+++ b/bidding/templates/layout.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title >NoQueue</title>
+  <title >Bidding</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -40,8 +40,8 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" id="logo" href="#">
-          <img src="{{ url_for('static',filename='images/logo.png')}}" height="20px"  alt="Fuprox Logo">
+      <a class="navbar-brand text-brand" id="logo" href="#" style="font-family: 'Gellix'">
+          Bidder
       </a>
       <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
@@ -56,7 +56,7 @@
   {% endblock %}
   <!--/ Intro Single End /-->
 <!--container-->
-<div class="container">
+<div class="container" style="margin-top: -20px;">
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
             {% for category,message in messages %}
@@ -64,12 +64,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-
-
   {% block content %}{% endblock %}
-
-
-
 </div>
 <!--  end container-->
     <div id="preloader"></div>
@@ -88,89 +83,6 @@
           <script src="{{ url_for('static',filename='js/main.js') }}"></script>
           <script src="{{ url_for('static',filename='js/utility.js') }}"></script>
   <script>
-
-       let link_ = window.location.origin
-
-        $(function () {
-          $('[data-toggle="tooltip"]').tooltip()
-        })
-        let url = window.location.origin;
-
-        $("#mpesa").on("click",()=>{
-	        window.location = (`${url}/payments`)
-        })
-        $("#card").on("click",()=>{
-            window.location = (`${url}/card`)
-        })
-        $("#reports").on("click",()=>{
-            window.location = (`${url}/reports`)
-        })
-
-        const info =(me)=>{
-            console.log(me.id)
-            let current_location = window.location.href;
-            sessionStorage.setItem("prev",current_location)
-            let id = me.id;
-            window.location = `${url}/info/${id}`
-        };
-
-        const prefillForm = (data, title = "") => {
-            // get the table handle
-            let handle = $("#report");
-            if (title !== "") {
-                handle.append(`<tr><td>${title}</td></tr>`)
-            }
-            // working with the report data
-            // mappiong begins
-            mapper =["Local","Online","Instant"]
-            data.map((value, key) => {
-                let id = value.id;
-                let branch_id = value.branch_id;
-                let active_ = value.active ? "Active" : "Serviced";
-                let forwarded = value.forwarded ? "Fowarded": "Not Forwarded";
-                let kind = mapper["kind"];
-                let service_name = value.service_name;
-                let serviced = value.serviced;
-                let start = value.start;
-                let teller = value.teller;
-                let user = value.user;
-
-                handle.append(
-                    `<tr class="asset" onclick="" id="${id}">
-                            <th data-id="${id}">${id}</th>
-                            <td data-id="${id}">${branch_id}</td>
-                            <td data-id="${id}">${active_}</td>
-                            <td data-id="${id}">${forwarded}</td>
-                            <td data-id="${id}">${kind}</td>
-                            <td data-id="${id}">${service_name}</td>
-                            <td data-id="${id}">${serviced}</td>
-                            <td data-id="${id}">${start}</td>
-                            <td data-id="${id}">${teller}</td>
-                            <td data-id="${id}">${user}</td>
-                        </tr>`)
-            })
-    }
-
-      $('#back_payments').on("click",()=>{
-        let location = sessionStorage.getItem("prev");
-        window.location = location.length > 1 ? location : "http://localhost:3000/payments"
-      });
-      // genarate reports
-      $("#generate_payments").on("click",()=>{
-
-          getData(`http://${lnk}:3000/mpesa/reports`,"POST",{"kind":""},(data)=>{
-              console.log(data)
-              prefillForm(data,"Payment Reports")
-          })
-       });
-
-      $("#report_main").on("click",()=>{
-          console.log("single report")
-      });
-      $("#reverse_main").on("click",()=>{
-          console.log("reserve transaction")
-      })
-
      const getData = (url,method,data,handleData) => {
             $.ajax({
                 url: url,
