--- a/bidding/templates/my_items.html
+++ b/bidding/templates/my_items.html
@@ -1,10 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'layout.html'%}
+<!--css requires for chart.js-->
+<!--end of css requires-->
+<!--here we are going to add chart.js and excelGen files -->
+
+{% block nav%}
+    <div class="navbar-collapse collapse offset-md-7" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item ">
+            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('sell_item') }}">Sell Item</a>
+          </li>
+
+
+            <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('my_items') }}">My Items</a>
+          </li>
+          <li class="nav-item">
+                <a class="nav-link " href="{{ url_for('logout') }}" style="color:red;">Logout</a>
+          </li>
+        </ul>
+      </div>
+
+{% endblock %}
+{% block status%}
+
+  <section class="intro-single">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h5><small class="text-muted">Home</small></h5>
+            <span class="color-text-a"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+{% endblock%}
+
+{% block content %}
+    <h5 class="text-info ">In Stock</h5>
+    <div class="row ">
+        {% if instock %}
+            {% for item in instock %}
+                <div class="col-lg-3 items mb-5">
+                    <img src="/static/images/{{ item['item'].image_file }}" alt="" class=" col-12 thumbs row mb-2" style="width: 250px;height: 250px;overflow: hidden;">
+                    <div class="">
+                        <h5>{{ item['item'].name }}</h5>
+                        <div class="h6 text-info">Winning bid — £{{ item["winning"].price }}.00</div>
+                        <div class="row col-lg-12">
+                            <a href="{{ url_for("view_item_single",id= item['item'].id) }}" class="h6 text-primary"  >More info</a>
+                            <a href="{{ url_for("mark_as_sold",id= item['item'].id) }}" class="h6 text-danger ml-5"  >Mark as Sold</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <h5 class="font-weight-bold col-lg-12 mb-4 mt-2" style="color:#cecece;">Empty</h5>
+        {% endif %}
+
+    </div>
+
+
+
+    <h5 class="text-danger ">Sold</h5>
+    <div class="row">
+        {% if sold %}
+            {% for item in sold %}
+                <div class="col-lg-3 items mb-5">
+                    <img src="/static/images/{{ item['item'].image_file }}" alt="" class=" col-12 thumbs row mb-2" style="width: 250px;height: 250px;overflow: hidden;">
+                    <div class="">
+                        <h5>{{ item['item'].name }}</h5>
+                        <div class="h6 text-info">Winning bid — £{{ item["winning"].price }}.00</div>
+                        <div class="row col-lg-12">
+                            <a href="{{ url_for("view_item_single",id= item['item'].id) }}" class="h6 text-primary"  >More info</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <h5 class="font-weight-bold col-lg-12 mb-4 mt-2" style="color:#cecece;">Empty</h5>
+        {% endif %}
+    </div>
+
+
+{% endblock %}
+
