--- a/bidding/templates/register.html
+++ b/bidding/templates/register.html
@@ -67,38 +67,46 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-    <p>Kindly note</p>
-    <ol class="mb-2 text-primary">
-        <li>User the key sent to your email to activate the application</li>
-        <li>The email to which the key was sent shall be used to access the portal</li>
-        <li class="text-danger">Finally, Take care of the key as it required for the system to work.</li>
-    </ol>
             {{ form.hidden_tag() }}
         <div class="form-group mt-4">
-            {{ form.key.label(class="form-control-label") }}
-            {% if form.key.errors %}
-            {{ form.key(class="form-control col-7 form-control-sm is-invalid")}}
+            {{ form.name.label(class="form-control-label") }}
+            {% if form.name.errors %}
+            {{ form.name(class="form-control col-6 form-control-sm is-invalid")}}
             <div class="invalid-feedback">
-                {% for error in form.key.errors %}
+                {% for error in form.name.errors %}
                 <span>{{ error }}</span>
                 {% endfor %}
             </div>
             {% else %}
-                {{ form.key(class="form-control col-7 form-control-sm")}}
+                {{ form.name(class="form-control col-6 form-control-sm")}}
             {% endif %}
         </div>
 
         <div class="form-group">
-            {{ form.username.label(class="form-control-label") }}
-            {% if form.username.errors %}
-            {{ form.username(class="form-control col-4 form-control-sm is-invalid")}}
+            {{ form.email.label(class="form-control-label") }}
+            {% if form.email.errors %}
+            {{ form.email(class="form-control col-6 form-control-sm is-invalid")}}
             <div class="invalid-feedback">
-                {% for error in form.username.errors %}
+                {% for error in form.email.errors %}
                 <span>{{ error }}</span>
                 {% endfor %}
             </div>
             {% else %}
-                {{ form.username(class="form-control col-4 form-control-sm")}}
+                {{ form.email(class="form-control col-6 form-control-sm")}}
+            {% endif %}
+        </div>
+
+    <div class="form-group">
+            {{ form.phone.label(class="form-control-label") }}
+            {% if form.phone.errors %}
+            {{ form.phone(class="form-control col-6 form-control-sm is-invalid")}}
+            <div class="invalid-feedback">
+                {% for error in form.phone.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+            </div>
+            {% else %}
+                {{ form.phone(class="form-control col-6 form-control-sm")}}
             {% endif %}
         </div>
 
@@ -159,188 +167,5 @@
           <!-- Template Main Javascript File -->
           <script src="{{ url_for('static',filename='js/main.js') }}"></script>
           <script src="{{ url_for('static',filename='js/utility.js') }}"></script>
-  <script>
-
-       // $('[data-toggle="tooltip"]').tooltip()
-      	// adding tooltip support
-        $(function () {
-          $('[data-toggle="tooltip"]').tooltip()
-        })
-        let url = window.location.origin;
-
-        $("#mpesa").on("click",()=>{
-	        window.location = (`${url}/payments`)
-        })
-        $("#card").on("click",()=>{
-            window.location = (`${url}/card`)
-        })
-        $("#reports").on("click",()=>{
-            window.location = (`${url}/reports`)
-        })
-
-        const info =(me)=>{
-            console.log(me.id)
-            let current_location = window.location.href;
-            sessionStorage.setItem("prev",current_location)
-            let id = me.id;
-            window.location = `${url}/info/${id}`
-        };
-
-        const prefillForm = (data, title = "") => {
-            // get the table handle
-            let handle = $("#report");
-            if (title !== "") {
-                handle.append(`<tr><td>${title}</td></tr>`)
-            }
-            // working with the report data
-            // mappiong begins
-            mapper =["Local","Online","Instant"]
-            data.map((value, key) => {
-                let id = value.id;
-                let branch_id = value.branch_id;
-                let active_ = value.active ? "Active" : "Serviced";
-                let forwarded = value.forwarded ? "Fowarded": "Not Forwarded";
-                let kind = mapper["kind"];
-                let service_name = value.service_name;
-                let serviced = value.serviced;
-                let start = value.start;
-                let teller = value.teller;
-                let user = value.user;
-
-                handle.append(
-                    `<tr class="asset" onclick="" id="${id}">
-                            <th data-id="${id}">${id}</th>
-                            <td data-id="${id}">${branch_id}</td>
-                            <td data-id="${id}">${active_}</td>
-                            <td data-id="${id}">${forwarded}</td>
-                            <td data-id="${id}">${kind}</td>
-                            <td data-id="${id}">${service_name}</td>
-                            <td data-id="${id}">${serviced}</td>
-                            <td data-id="${id}">${start}</td>
-                            <td data-id="${id}">${teller}</td>
-                            <td data-id="${id}">${user}</td>
-                        </tr>`)
-            })
-    }
-
-      $('#back_payments').on("click",()=>{
-        let location = sessionStorage.getItem("prev");
-        window.location = location.length > 1 ? location : "http://localhost:3000/payments"
-      });
-      // genarate reports
-      $("#generate_payments").on("click",()=>{
-
-          /*
-          * <!--
-            {
-                "amount": 5.0,
-                "checkout_request_id": "ws_CO_090720201422507223",
-                "date_added": "2020-07-09T11:27:52",
-                "id": 2,
-                "local_transactional_key": "3a5ec789b6b09619f2dd",
-                "merchant_request_id": "17556-3808479-1",
-                "phone_number": "254719573310",
-                "receipt_number": "OG99LZHERF",
-                "result_code": 0,
-                "result_desc": "The service request is processed successfully.",
-                "transaction_date": "20200709142258"
-            },
-            -->
-            <tr>
-                <th scope="col" id="issueid">Transaction ID</th>
-                <th scope="col" id="from">Reciept Number</th>
-                <th scope="col" id="subject">Phone number</th>
-                <th scope="col" id="dateReceived">Checkout Reqeust ID</th>
-                <th scope="col" id="assignedTo">Result Code</th>
-                <th scope="col" id="dateAssigned">Local Transaction Key</th>
-                <th scope="col" id="resolvedBy">AMount</th>
-                <th scope="col" id="resolveDate">Status</th>
-          * */
-          getData(`http://${lnk}:3000/mpesa/reports`,"POST",{"kind":""},(data)=>{
-              console.log(data)
-              prefillForm(data,"Payment Reports")
-          })
-       });
-
-      $("#report_main").on("click",()=>{
-          console.log("single report")
-      });
-      $("#reverse_main").on("click",()=>{
-          console.log("reserve transaction")
-      })
-
-     const getData = (url,method,data,handleData) => {
-            $.ajax({
-                url: url,
-                method: method,
-                contentType: "application/json",
-                dataType: "json",
-                data: JSON.stringify(data),
-                success: function (result) {
-                    handleData(result);
-                }
-            });
-      }
-
-
-      $("#download_apps").on("click",(e)=>{
-          let application = Number($("#application").val())
-          let platform = Number($("#platform").val())
-
-          if(application == 1004){
-            // android
-            message = "Android App"
-            link = "app"
-          }else if(application === 1001){
-            // teller
-            if(platform === 2001){
-              // windows
-            message = "Windows Teller App"
-            link = "teller/windows"
-            }else if(platform === 2002){
-              // mac
-             link = "teller/windows"
-             message = "Mac Teller App"
-            }else if(platform === 2003){
-              // linux
-              link = "teller/linux"
-              message = "Linux Teller App"
-            }
-          }else if(application === 1002){
-              // display
-              if(platform === 2001){
-                // windows
-                link = "display/windows"
-                message = "Windows Display App"
-              }else if(platform === 2002){
-                // mac
-                link = "display/mac"
-                message = "Mac Display App"
-              }else if(platform === 2003){
-                // linux
-                link = "display/linux"
-                message = "Linux Display App"
-              }
-          }else if(application === 1003){
-              // book
-              if(platform === 2001){
-                // windows
-                link = "book/windows"
-                message = "Windows Book App"
-              }else if(platform === 2002){
-                // mac
-                link = "book/mac"
-                message = "Mac Book App"
-              }else if(platform === 2003){
-                // linux
-                link = "book/linux"
-                message = "Linux Book App"
-              }
-          }
-          let domain = "localhost"
-          domain = "159.65.144.235"
-          window.location.href = `http://${domain}:3000/download/${link}`
-      })
-  </script>
 </body>
 </html>
