--- a/bidding/templates/sell_item.html
+++ b/bidding/templates/sell_item.html
@@ -1,10 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'layout.html'%}
+<!--css requires for chart.js-->
+<!--end of css requires-->
+<!--here we are going to add chart.js and excelGen files -->
+
+{% block nav%}
+    <div class="navbar-collapse collapse offset-md-7" id="navbarDefault">
+        <ul class="navbar-nav">
+          <li class="nav-item ">
+            <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('sell_item') }}">Sell Item</a>
+          </li>
+
+            <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('my_items') }}">My Items</a>
+          </li>
+          <li class="nav-item">
+                <a class="nav-link " href="{{ url_for('logout') }}" style="color:red;">Logout</a>
+          </li>
+        </ul>
+      </div>
+
+{% endblock %}
+{% block status%}
+
+  <section class="intro-single">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-8">
+          <div class="title-single-box">
+            <h5><small class="text-muted">Home</small></h5>
+            <span class="color-text-a"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+{% endblock%}
+
+{% block content %}
+    <div class="row col-lg-12">
+      <h5 class="text-muted">Post an Item for Sale</h5>
+     <form method="POST" action="" class="col-lg-12 ml-n3" enctype="multipart/form-data">
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+                {% for category,message in messages %}
+                <div class="alert alert-{{ category }} col-lg-6">{{message}}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+            {{ form.hidden_tag() }}
+            <div class="form-group mt-4">
+                {{ form.name.label(class="form-control-label") }}
+                {% if form.name.errors %}
+                {{ form.name(class="form-control col-lg-6 form-control-sm is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.name.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                    {{ form.name(class="form-control col-lg-6 form-control-sm")}}
+                {% endif %}
+            </div>
+
+            <div class="form-group">
+                {{ form.image.label(class="form-control-label") }}
+                {% if form.image.errors %}
+                {{ form.image(class="form-control col-lg-6 form-control-sm is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.image.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                    {{ form.image(class="form-control col-lg-6 form-control-sm", cols="20")}}
+                {% endif %}
+            </div>
+
+
+
+      <div class="form-group">
+                {{ form.description.label(class="form-control-label") }}
+                {% if form.description.errors %}
+                {{ form.description(class="form-control col-lg-6 form-control-sm is-invalid")}}
+                <div class="invalid-feedback">
+                    {% for error in form.description.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                    {{ form.description(class="form-control col-lg-6 form-control-sm ", rows=10)}}
+                {% endif %}
+            </div>
+
+        <div class="form-group mt-3 col-3 row">
+            {{form.submit(class="btn btn-sm btn-success btn-block")}}
+        </div>
+
+        </form>
+    </div>
+{% endblock %}
+
