--- a/bidding/templates/home.html
+++ b/bidding/templates/home.html
@@ -16,9 +16,15 @@
             <li class="nav-item">
             <a class="nav-link" href="{{ url_for('my_items') }}">My Items</a>
           </li>
-          <li class="nav-item">
+          {% if current_user.is_authenticated %}
+              <li class="nav-item">
                 <a class="nav-link text-danger" href="{{ url_for('logout') }}" >Logout</a>
           </li>
+          {% else %}
+              <li class="nav-item">
+                <a class="nav-link text-success" href="{{ url_for('login') }}" >Login</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
 
