--- a/bidding/templates/login.html
+++ b/bidding/templates/login.html
@@ -77,6 +77,7 @@
                 <div class="form-group mt-3">
                     {{ form.submit(class="btn btn-sm btn-success btn-block mt-4")}}
                 </div>
+                <a href="{{ url_for("register") }}" class="btn btn-secondary btn-sm">Create an Account</a>
             </form>
         </div>
      </div>
