--- a/bidding/templates/login.html
+++ b/bidding/templates/login.html
@@ -33,9 +33,9 @@
      <div class="row col-lg-12">
         <div class="col-lg-4 offset-lg-4 col-md-8 offset-md-2">
 
-            <a class="navbar-brand text-brand" href="#">
-                 <img src="{{ url_for('static',filename='images/logo.png')}}"  height="20px" alt="Fuprox Logo">
-            </a>
+            <a class="navbar-brand text-brand" id="logo" href="#" style="font-family: 'Gellix'">
+              Bidder
+          </a>
 
             <form action="" method="POST" class="">
                 {{ form.hidden_tag() }}
