--- a/bidding/templates/register.html
+++ b/bidding/templates/register.html
@@ -40,8 +40,8 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" id="logo" href="#">
-          <img src="{{ url_for('static',filename='images/logo.png')}}" height="20px"  alt="Fuprox Logo">
+      <a class="navbar-brand text-brand" id="logo" href="#" style="font-family: 'Gellix'">
+          Bidder
       </a>
       <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
