--- a/bidding/templates/register.html
+++ b/bidding/templates/register.html
@@ -143,6 +143,8 @@
         <div class="form-group mt-3 col-3 row">
             {{form.submit(class="btn btn-sm btn-success btn-block")}}
         </div>
+        <a href="{{ url_for("login") }}" class="btn btn-secondary btn-sm">Login</a>
+
 
     </form>
 
